[tool.poetry]
name = "rir-netdata-v3"
version = "3.0.1"
description = "Creates datasets for assigned number resources, RPKI ROA VRPs and other Internet relevant elements."
authors = ["Carlos Martinez <carlos@cagnazzo.uy>"]
license = "2-CLAUSE BSD"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
petl = "^1.7.10"
ipaddr = "^2.2.0"
pytricia = "^1.0.2"
Sphinx = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
